Bug 318816 - Audio and video files cannot be opened from Files with Plasma Media Center
Summary: Audio and video files cannot be opened from Files with Plasma Media Center
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
Depends on:
Blocks: 321239
  Show dependency treegraph
 
Reported: 2013-04-24 19:45 UTC by Thomas Pfeiffer
Modified: 2013-06-16 21:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2013-04-24 19:45:12 UTC
I'm not sure if this is a bug in Files/PA or in PMC, so please move it top PMC if it should go there:
Currently, audio and video files are not associated with any application by default the Mer Plasma Active images. When tap one, get asked which program to open it with and select Plasma Mediacenter, it still does not open it.
If I install Bangarang, it works fine, but not with the default setup using only PMC

Reproducible: Always

Steps to Reproduce:
1. Open Files
2. Select Music or Videos
3. Tap a file
Actual Results:  
"Open with" dialog opens

Expected Results:  
File is played in PMC
Comment 1 Marco Martin 2013-04-30 08:52:11 UTC
this is actually related to pmc: it should open urls passed as parameter and associate to media files
Comment 2 Marco Martin 2013-04-30 10:36:05 UTC
Git commit 9688da710b951a7e5488e35dbd686d654b560936 by Marco Martin.
Committed on 30/04/2013 at 12:27.
Pushed by mart into branch 'master'.

associate to images, audio and video

open the files passed on command line

M  +1    -0    shells/newshell/main.cpp
M  +16   -0    shells/newshell/mainwindow.cpp
M  +4    -0    shells/newshell/package/contents/ui/mediacenter.qml
M  +2    -0    shells/newshell/plasma-mediacenter.desktop

http://commits.kde.org/plasma-mediacenter/9688da710b951a7e5488e35dbd686d654b560936
Comment 3 Thomas Pfeiffer 2013-04-30 22:41:40 UTC
Does this mean that these files will be associated with PMC everywhere it is installed? If so: I'm not sure if this is such a good idea. On a desktop/laptop PC, for example, people will likely want to open media files with other media players such as Amarok and Dragon Player by default and use PMC only when their PC is connected to the TV.
On Plasma Active, on the other hand, where PMC is the default media player, it should be associated with at least audio and video files.
For images I think we should still use "Images" by default in PA, since it works at least as well as PMC and probably uses less resources.
Comment 4 Thomas Pfeiffer 2013-06-16 21:17:58 UTC
Audio and video files are opened with PMC correctly now. Images in Plasma Active are still opened with the Images application (as intended)