associate to images, audio and video

open the files passed on command line

BUG:318816